<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:paddingHorizontal="24dp"
    android:paddingVertical="8dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description_image_story"
        android:scaleType="centerCrop"
        android:transitionName="story_image"
        app:layout_constraintBottom_toTopOf="@+id/default_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/default_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description_avatar"
        android:transitionName="user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_image"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/const_person_name"
        android:textColor="@color/dicoding_secondary_700"
        android:textSize="18sp"
        android:transitionName="user_name"
        app:layout_constraintBottom_toBottomOf="@+id/default_avatar"
        app:layout_constraintStart_toEndOf="@+id/default_avatar"
        app:layout_constraintTop_toTopOf="@+id/default_avatar" />

    <TextView
        android:id="@+id/story_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:transitionName="story_upload_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_name"
        tools:text="diupload beberapa waktu lalu" />


</androidx.constraintlayout.widget.ConstraintLayout>